Coloquei um Olá, Mundo!

--- a/exercicios-paralelos/exp007/index.html
+++ b/exercicios-paralelos/exp007/index.html
@@ -30,7 +30,7 @@
                 <img src="fantasia-g.png" alt="Imagem do filme Fantasia">
             </picture>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur beatae nisi voluptatem quaerat saepe quo? Porro maxime suscipit et enim vitae voluptatem deserunt. Labore rem aliquam modi illum non blanditiis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eligendi <strong>molestias</strong> dolorum quaerat alias numquam a eveniet libero. Voluptatem eaque atque consectetur, blanditiis dolorem quaerat laborum natus iusto odio impedit!</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore error blanditiis reiciendis cum eligendi nesciunt quibusdam sapiente minus numquam, <strong>totam</strong>, quae accusantium, atque placeat eaque. Inventore eos sapiente doloribus consequatur? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos perferendis maiores voluptatibus. Rem debitis error recusandae, repudiandae sequi doloremque laboriosam ipsam consectetur laborum voluptates exercitationem distinctio sunt! Eaque, perspiciatis quia?</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore error blanditiis reiciendis cum eligendi nesciunt quibusdam sapiente minus numquam, <strong>totam</strong>, quae accusantium, atque placeat eaque. Inventore eos sapiente doloribus consequatur? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos perferendis maiores voluptatibus. Rem debitis error recusandae, repudiandae sequi doloremque laboriosam ipsam consectetur laborum voluptates exercitationem distinctio sunt! Eaque, perspiciatis quia? Olá, Mundo!</p>
         </article>
     </main>
     <footer>
