--- a/exercicios/ex022-imagens-de-fundo/fundo001.html
+++ b/exercicios/ex022-imagens-de-fundo/fundo001.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Teste de Imagens de Fundo</title>
+    <style>
+        .quadrado {
+            display: inline-block;
+            border: 1px solid black;
+            border-radius: 10px;
+            background-color: lightgray;
+            width: 300px;
+            height: 300px;
+        }
+
+        #q1 {
+            background-color: mediumaquamarine;
+        }
+
+        #q2 {
+            background-image: linear-gradient(to bottom, yellow, orange);
+        }
+
+        #q3 {
+            background-image: url('imagens/pattern002.png');
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="quadrado" id="q1">
+
+    </div>
+    <div class="quadrado" id="q2">
+
+    </div>
+    <div class="quadrado" id="q3">
+
+    </div>
 </body>
 </html>
