--- a/exercicios/ex022-imagens-de-fundo/fundo006.html
+++ b/exercicios/ex022-imagens-de-fundo/fundo006.html
@@ -10,14 +10,15 @@
             height: 100vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
-            background-repeat: no-repeat;
-            background-position: center top;
+            background-repeat:repeat;
+            background-position: center center;
             background-size: cover;
+            background-attachment: scroll;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,6 +30,11 @@
     <main> 
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nihil minus rem! Sequi sint illum rem voluptatum explicabo? Ex, quisquam reprehenderit architecto maxime nemo distinctio suscipit modi sequi quia cumque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam minima, illum rerum error commodi expedita aperiam vel, porro quam ad natus tenetur possimus sapiente cum architecto voluptate harum molestiae facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati fuga tempora perferendis consequatur eveniet ratione, libero velit iste beatae eos ipsum eum a dignissimos quaerat voluptatibus illo harum nemo nostrum!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nihil minus rem! Sequi sint illum rem voluptatum explicabo? Ex, quisquam reprehenderit architecto maxime nemo distinctio suscipit modi sequi quia cumque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam minima, illum rerum error commodi expedita aperiam vel, porro quam ad natus tenetur possimus sapiente cum architecto voluptate harum molestiae facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati fuga tempora perferendis consequatur eveniet ratione, libero velit iste beatae eos ipsum eum a dignissimos quaerat voluptatibus illo harum nemo nostrum!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nihil minus rem! Sequi sint illum rem voluptatum explicabo? Ex, quisquam reprehenderit architecto maxime nemo distinctio suscipit modi sequi quia cumque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam minima, illum rerum error commodi expedita aperiam vel, porro quam ad natus tenetur possimus sapiente cum architecto voluptate harum molestiae facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati fuga tempora perferendis consequatur eveniet ratione, libero velit iste beatae eos ipsum eum a dignissimos quaerat voluptatibus illo harum nemo nostrum!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nihil minus rem! Sequi sint illum rem voluptatum explicabo? Ex, quisquam reprehenderit architecto maxime nemo distinctio suscipit modi sequi quia cumque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam minima, illum rerum error commodi expedita aperiam vel, porro quam ad natus tenetur possimus sapiente cum architecto voluptate harum molestiae facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati fuga tempora perferendis consequatur eveniet ratione, libero velit iste beatae eos ipsum eum a dignissimos quaerat voluptatibus illo harum nemo nostrum!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nihil minus rem! Sequi sint illum rem voluptatum explicabo? Ex, quisquam reprehenderit architecto maxime nemo distinctio suscipit modi sequi quia cumque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam minima, illum rerum error commodi expedita aperiam vel, porro quam ad natus tenetur possimus sapiente cum architecto voluptate harum molestiae facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati fuga tempora perferendis consequatur eveniet ratione, libero velit iste beatae eos ipsum eum a dignissimos quaerat voluptatibus illo harum nemo nostrum!</p>
+
     </main>
 </body>
 </html>
