--- a/exercicios-paralelos/exp010/index.html
+++ b/exercicios-paralelos/exp010/index.html
@@ -114,6 +114,7 @@
             <h1>Este é o título do Conteúdo Principal</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit dorime ameno ameno dorime. Lorem paraquequara araraquara.</p> 
             <picture>
+                <source media="(max-width:400px)" srcset="imagens/floresta-pp.jpg" type="image/jpg">
                 <source media="(max-width:700px)" srcset="imagens/floresta-p.jpg" type="image/jpg">
                 <source media="(max-width:1100px)" srcset="imagens/floresta-m.jpg" type="image/jpg">
                 <img src="imagens/floresta.jpg" alt="Imagem de uma Medusa">
