atualização do exp010

--- a/exercicios-paralelos/exp010/index.html
+++ b/exercicios-paralelos/exp010/index.html
@@ -83,7 +83,7 @@
             text-align: justify;
             background-color: rgba(0, 0, 0, 0.174);
             line-height: 20px;
-            max-width:500px;    
+            max-width:300px;    
             padding:10px;
         }
 
@@ -117,7 +117,7 @@
                 <source media="(max-width:400px)" srcset="imagens/floresta-pp.jpg" type="image/jpg">
                 <source media="(max-width:700px)" srcset="imagens/floresta-p.jpg" type="image/jpg">
                 <source media="(max-width:1100px)" srcset="imagens/floresta-m.jpg" type="image/jpg">
-                <img src="imagens/floresta.jpg" alt="Imagem de uma Medusa">
+                <img src="imagens/floresta.jpg" alt="Imagem de uma floresta">
             </picture>
             <p>Veja abaixo uma Imagem interessante</p>
         </section>
