atualização do exp010

--- a/exercicios-paralelos/exp010/index.html
+++ b/exercicios-paralelos/exp010/index.html
@@ -72,6 +72,7 @@
             padding-top:10vh;
             padding-bottom: 10vh;
             padding-left: 30px;
+            padding-right: 30px;
             margin-bottom: 30px;
             background-image:url('imagens/imagem02.jpg');
             background-position: center center;
